<resources>

    <string name="app_name">Bike The Way</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="guide">Guide</string>
    <string name="recent">Recent</string>
    <string name="group_option">Option</string>
    <string name="follow">Follow</string>
    <string name="settings">Parameters</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_bluetooth">Bluetooth</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="help">The Goal of this App is to help you getting around on your bike without focussing on yout phone !</string>
    <string name="About">About</string>
    <string name="house">My House</string>
    <string name="work">My Work</string>

</resources>
