<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/logo_btw"
        android:title="@string/home" />

    <item android:title="@string/group_option">
        <menu>
            <item
                android:id="@+id/nav_recent"
                android:icon="@drawable/ic_schedule_black_24dp"
                android:title="@string/recent" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_directions_black_24dp"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_directions_black_24dp"
                android:title="@string/About" />
            <item
                android:id="@+id/nav_house"
                android:icon="@drawable/ic_directions_black_24dp"
                android:title="@string/house" />
            <item
                android:id="@+id/nav_work"
                android:icon="@drawable/ic_directions_black_24dp"
                android:title="@string/work" />

        </menu>
    </item>

</menu>
